Fix tutorial open command, add overflow to transaction output (#3024)
* Fix tutorial open command, add overflow to transaction output
* Update unit test
* Handle when javascript-test-runner additional args can't be updated

--- a/packages/blockchain-ui/src/components/elements/TransactionOutput/TransactionOutput.scss
+++ b/packages/blockchain-ui/src/components/elements/TransactionOutput/TransactionOutput.scss
@@ -16,6 +16,7 @@
         background-color: #F4F4F4;
         min-height: 100%;
         height: 1px;
+        overflow: scroll;
 
         .output-body {
             @include carbon--font-face-mono;
